--- a/Exrecise1/index.html
+++ b/Exrecise1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=k, initial-scale=1.0">
     <title>Exrecise1</title>
-</head>
+</head> 
 <body>
     <header>
         <h1>Exrecise1</h1>
@@ -37,22 +37,22 @@
             </figure>
         </div>
         <div>
-            <video src="vid1.mp4" alt="video1"></video>
+            <video src="vid1.mp4" alt="video1" controls height="320" ></video>
         </div>
         <div>
-            <video src="vid2.mp4" alt="video2"></video>
+            <video src="vid2.mp4" alt="video2" controls height="320" ></video>
         </div>
         <div>
-            <video src="vid3.mp4" alt="video3"></video>
+            <video src="vid3.mp4" alt="video3" controls height="320" ></video>
         </div>
         <div>
-            <video src="vid4.mp4" alt="video4"></video>
+            <video src="vid4.mp4" alt="video4" controls height="320" ></video>
         </div>
         <div>
-            <video src="vid5.mp4" alt="video5"></video>
+            <video src="vid5.mp4" alt="video5" controls height="320" ></video>
         </div>
         <div>
-            <video src="vid6.mp4" alt="video6"></video>
+            <video src="vid6.mp4" alt="video6" controls height="320" width="239"></video>
         </div>
     </main>
 </body>
