--- a/day17/index.html
+++ b/day17/index.html
@@ -13,13 +13,18 @@
         }
         .box1{
             color:yellow;padding: 10px;
-            margin: 5px;
+            margin: 25px;
             border: 2px solid blue;
             height: 200px;
             box-sizing: border-box;
         }
         .box2{
             color: red;
+            padding: 10px;  
+            margin: 25px;
+            border: 2px solid black;
+            height: 200px;
+            box-sizing: border-box;
         }
     </style>
 </head>
