SORTED IN ORDER

--- a/day13/index.html
+++ b/day13/index.html
@@ -1,14 +1,23 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entities</title>
-  </head>
-  <body>
-    this is the code for paragaph &lt;p&gt; &lt;/p&gt;
-    <pre>
-        Copyright &copy;&nbsp;&nbsp; ShubomCodes
-    </pre>
-  </body>
-  </html>
+    <title>CSS</title>
+    <style>
+        div, span {
+            color: red;
+            background-color: yellow;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        <h1>Hey I am Shubom and today I am learning CSS.</h1>
+    </div>
+    <span>
+        I have completed HTML.
+    </span>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad minus ut accusamus, ab nisi facilis, necessitatibus provident voluptas nihil, voluptatibus modi similique voluptatum harum eveniet aliquam quo assumenda! Error vero quasi nobis impedit provident natus autem consequatur culpa temporibus? Magni dicta vero ex fugit laboriosam harum a necessitatibus exercitationem.</p>
+</body>
+</html>
