--- a/HTML & CSS/DAY54/INDEX.HTML
+++ b/HTML & CSS/DAY54/INDEX.HTML
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction to Javascript</script></title>
+    <title>Introduction to Javascript</title>
+
 </head>
 <body>
+    <div class="box">
+        Hey i am a box
+    </div>
+    <button>Submit</button>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
